# Strides

./: README.md
backend/: main.py  migrate_todos.py  pyproject.toml  requirements.txt
backend/models/: account_models.py  category_models.py  expense_models.py  task_models.py  todo_models.py  transaction_models.py  trip_models.py  user_models.py
backend/routes/: accounts.py  agent.py  auth.py  categories.py  expenses.py  tasks.py  todos.py  transactions.py  trips.py
backend/utils/: database.py  security.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AIAgent.tsx  AddCategoryForm.tsx  AddTaskForm.tsx  ConfirmationDialog.tsx  DailyLogModal.tsx  EditForm.tsx  Header.tsx  Modal.tsx  TaskItem.tsx  TaskList.tsx  ThemeToggle.tsx
frontend/src/components/expenses/: AccountForm.tsx  AccountList.tsx  AccountListSidebar.tsx  AddAccountForm.tsx  BalanceSummary.tsx  CategoryManager.tsx  ExpenseSidebar.tsx  TransactionForm.tsx  (+2 more)
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/data/: mockTasks.ts
frontend/src/hooks/: useOptimisticUpdates.ts  useSelectiveDataFetching.ts
frontend/src/pages/: AuthPage.tsx  Dashboard.tsx  ExpensesView.tsx  ExpensesViewNew.tsx  MonthlyView.tsx  TaskView.tsx
frontend/src/services/: accountService.ts  agentService.ts  api.ts  authService.ts  categoryService.ts  creditCardService.ts  taskService.ts  todoService.ts  transactionService.ts  tripService.ts
frontend/src/types/: index.ts  trip.ts
frontend/src/utils/: date.ts  theme.ts
(+17 files in other folders)
